# ai-orchestrator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  MUSICGEN.md  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup_app.py
config/: config-schema.json  config.sample.json
docs/plans/: 2026-01-18-multi-model-routing-design.md
scripts/: debug_mlx_reasoning.py  dev-chat.sh  gemini-429-diagnose.sh  gemini-retry.sh  musicgen_generate.py
src/: __init__.py  credentials.py  manage_models.py  music.py  orchestrator.py  storage.py
src/gui/: __init__.py  app.py  chat_widget.py  input_widget.py  main_window.py  settings_dialog.py  sidebar.py  styles.py
src/menubar/: __init__.py  app.py
src/tui/: __init__.py  app.py
tests/: __init__.py  test_config_routing.py  test_orchestrator.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.js
