[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator"
version = "2.0.0"
description = "Intelligent multi-model AI orchestrator with secure credential management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jason Vassallo"}
]
keywords = [
    "ai",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "orchestrator",
    "multi-model"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
google = ["google-genai>=1.0.0"]
cohere = ["cohere>=4.0.0"]
secure = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]
# GUI application (native Mac app)
gui = [
    "PySide6>=6.6.0",
    "qasync>=0.24.0",
    "pygments>=2.17.0",
    "markdown>=3.5.0",
]
# Terminal UI (beautiful CLI)
tui = [
    "textual>=0.47.0",
    "rich>=13.7.0",
]
# Menu bar app (macOS only)
menubar = [
    "rumps>=0.4.0",
]
# Local MLX models (Apple Silicon)
mlx = [
    "mlx-lm>=0.16.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.1.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "huggingface-hub>=0.16.4",
]
# All UI options
ui = [
    "ai-orchestrator[gui,tui,menubar]",
]
# All features
all = [
    "ai-orchestrator[openai,anthropic,google,cohere,secure,ui,mlx]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "py2app>=0.28.0",
]

[project.scripts]
ai-orchestrator = "src.orchestrator:main"
ai-configure = "src.credentials:configure_credentials_interactive"
ai-app = "src.gui.app:main"
ai-chat = "src.tui.app:main"
ai-menubar = "src.menubar.app:main"

[project.urls]
Homepage = "https://github.com/jasonvassallo/ai-orchestrator"
Documentation = "https://github.com/jasonvassallo/ai-orchestrator#readme"
Repository = "https://github.com/jasonvassallo/ai-orchestrator.git"
Issues = "https://github.com/jasonvassallo/ai-orchestrator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "S101",  # assert usage (fine in tests)
    "S607",  # subprocess with partial path (false positive for ioreg)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
# Exclude optional UI modules, music, tests, and build artifacts
exclude = [
    "src/gui/",
    "src/tui/",
    "src/menubar/",
    "src/music\\.py",
    "tests/",
    "dist/",
    "build/",
    "\\.venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
